--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
 - type: web
   name: cdea-finance
   runtime: ruby
-  repo: https://github.com/matinou-github/cdea-finance
-  branch: develop
+  repo: https://github.com/matinou-github/cdea-finance.git
+  branch: main
   plan: free
   envVars:
   - key: RAILS_MASTER_KEY
